fixed login and swagger
